--- a/src/main/resources/templates/skillBoard/skillBoardModify.html
+++ b/src/main/resources/templates/skillBoard/skillBoardModify.html
@@ -10,23 +10,45 @@
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css" rel="stylesheet">
 
     <style th:inline="text">
-        body{
-            overflow: auto;
-            background-image: url([[@{/img/newBackpiture.jpg}]]);
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-
+        .boardWriteMainDiv{
+            width: 1100px;
+            height: 900px;
+            min-height: 900px;
+            margin: 40px auto;
         }
+
+        .writeinfoDiv{
+            text-align: center;
+            align-content: center;
+            display: block;
+            width: 100%;
+        }
+        .writeinfoDiv label{
+            display: block;
+            width: 100%;
+            font-family: 'Do Hyeon', sans-serif;
+        }
+        .writeinfoDiv input{
+            width: 100%;
+            display: block;
+            font-family: 'Do Hyeon', sans-serif;
+        }
+
 
         .summernote{
-            background-color: white;
-            width: 100vw;
-            height: 70vh;
+            min-height: 800px;
         }
 
-        .summernote img{
-            max-width: 100%;
+        textarea{
+            min-height: 800px;
+        }
+
+        @media screen and (max-width: 1100px) {
+            .boardWriteMainDiv{
+                width: 100%;
+                min-height: 1200px;
+                margin: 40px 0;
+            }
         }
 
 
@@ -42,22 +64,36 @@
 </th:block>
 
 <div layout:fragment="content">
-    <div class="form-group container">
-        <div class="form-group text-light font-weight-bold bg-dark text-center">
+    <div class="boardWriteMainDiv">
+        <div class="writeinfoDiv">
             <label for="title">[제목]</label>
-            <input type="text" class="form-control bg-dark text-light text-center" th:value="${board.getTitle()}" id="title">
+            <input type="text" th:value="${board.getTitle()}" id="title">
             <label for="boardDescription">설명(없어도 괜찮습니다.)</label>
-            <input type="text" class="form-control bg-dark text-light text-center"  th:value="${board.getDescription()}" id="boardDescription">
+            <input type="text" th:value="${board.getDescription()}" id="boardDescription">
+            <select id="cateListSelect">
+                <option value="0">noneCategory</option>
+                <option th:value="${cate.getId()}" th:text="${cate.getCategoryName()}" th:each="cate : ${cateAllList}"></option>
+            </select>
         </div>
         <textarea class="summernote" rows="5" id="content" th:utext="${board.getContent()}"></textarea>
 
         <script th:inline="javascript">
             let boardId = [[${board.getId()}]]
+            let cate = [[${board.getBoardCategory()}]]
+            if(cate === null){
+                $('#cateListSelect').val('0').prop("selected",true);
+            }else {
+                console.log("아니 왜?")
+                $('#cateListSelect').val(cate.id).prop("selected",true);
+            }
+
+
         </script>
         <button type="button" class="btn btn-warning btn-block" onclick="skillboardModify(boardId)">수정하기</button>
     </div>
 
     <script>
+
         window.onbeforeunload = function () {
             $.ajax({
                 type: "DELETE",
@@ -69,6 +105,7 @@
 
         $('.summernote').summernote({
             lang: 'ko-KR',
+            height: 700,
             callbacks: {
                 //여기 부분이 이미지를 첨부하는 부분
                 // 업로드와 동시에 진행되는 콜백 함수
