--- a/src/main/resources/templates/board/boardDetails.html
+++ b/src/main/resources/templates/board/boardDetails.html
@@ -144,11 +144,11 @@
       var thumbnail = [[${board.getThumbnail()}]]
 
       if(thumbnail == "" || thumbnail == null){
-        document.getElementById("ogImage").setAttribute("content", "/img/thumbnailandimage/defaultthumbnail.png")
-        document.getElementById("twitterImage").setAttribute("content", "/img/thumbnailandimage/defaultthumbnail.png")
+        document.getElementById("ogImage").setAttribute("content", "https://www.ybloglab.shop/img/thumbnailandimage/defaultthumbnail.png")
+        document.getElementById("twitterImage").setAttribute("content", "https://www.ybloglab.shop/img/thumbnailandimage/defaultthumbnail.png")
       }else{
-        document.getElementById("ogImage").setAttribute("content", thumbnail)
-        document.getElementById("twitterImage").setAttribute("content", thumbnail)
+        document.getElementById("ogImage").setAttribute("content", "https://www.ybloglab.shop" + thumbnail)
+        document.getElementById("twitterImage").setAttribute("content", "https://www.ybloglab.shop"+thumbnail)
       }
 
 
