--- a/src/main/resources/templates/skillBoard/skillboardCateMain.html
+++ b/src/main/resources/templates/skillBoard/skillboardCateMain.html
@@ -11,20 +11,50 @@
 
         .mainCateDiv{
             width: 1100px;
+            height: 1200px;
             min-height: 700px;
             margin: 100px auto;
+            border-top: 3px solid #c2b2f0;
         }
 
         .listContainer{
             width: 100%;
+            height: 300px;
             display: flex;
             flex-wrap: wrap;
+            text-align: center;
+            margin: 60px auto;
         }
+
+        .thumimage{
+            align-content: center;
+            width: 100%;
+            height: 100%;
+        }
+
         .listContainer a{
-            width: 50%;
+            font-family: 'Do Hyeon', sans-serif;
+            width: 40%;
+            font-size: 30px;
+            line-height: 40px;
+            margin: 70px auto;
+            color: black;
+        }
+
+        .listContainer a:hover{
+            text-decoration: none;
+        }
+
+        .listContainer a:link{
+            text-decoration: none;
+        }
+
+        .listContainer a:visited{
+            text-decoration: none;
         }
 
         .listCateDiv{
+            border-top: 3px solid #c2b2f0;
             width: 100%;
 
         }
@@ -32,8 +62,9 @@
         .listCateDiv label{
             display: block;
         }
-        .listCateDiv img{
+        .listContainer img{
             width: 100%;
+            height: 300px;
             display: block;
         }
 
@@ -58,17 +89,13 @@
 
 <div layout:fragment="content">
 
-
     <div class="mainCateDiv">
-
         <div class="listContainer">
-
             <a th:href=" @{/auth/skillboard/category/{id}(id = ${category.getId()})}" th:each="category : ${categoryList}">
                 <div class="thumimage">
                     <img th:id="catethumbnail + ${category.getId()}"  th:src="${category.getCategoryThunmbnail()}">
                 </div>
                 <div class="listCateDiv" >
-                    <label type="text" th:id="cateId + ${category.getId()}" th:text="${category.getId()}"></label>
                     <label type="text" th:id="cateName + ${category.getId()}"  th:text="${category.getCategoryName()}"></label>
                 </div>
             </a>
