--- a/src/main/resources/templates/skillBoard/skillboardCateMain.html
+++ b/src/main/resources/templates/skillBoard/skillboardCateMain.html
@@ -11,10 +11,11 @@
 
         .mainCateDiv{
             width: 1100px;
-            height: 1200px;
+            height: 1800px;
             min-height: 700px;
             margin: 100px auto;
             border-top: 3px solid #c2b2f0;
+            position: relative;
         }
 
         .listContainer{
@@ -68,9 +69,35 @@
             display: block;
         }
 
+        .boardListNumber{
+            position: absolute;
+            bottom: -20px;
+            width: 100%;
+            border: solid 2px black;
+            border-radius: 10px;
+            align-content: center;
+        }
+
+        .boardListNumber ul{
+            font-size: 20px;
+            font-family: 'Do Hyeon', sans-serif;
+            list-style: none;
+            display: inline;
+
+        }
+        .boardListNumber li{
+            list-style: none;
+            display: inline;
+            margin: 0 10px;
+            width: 10px;
+            font-family: 'Do Hyeon', sans-serif;
+        }
+
         @media screen and (max-width: 1100px) {
             .mainCateDiv{
                 width: 100vw;
+                margin: 100px 0;
+                position: relative;
 
             }
         }
@@ -100,6 +127,17 @@
                 </div>
             </a>
         </div>
+
+        <div class="boardListNumber">
+            <ul>
+                <li th:if="${categoryList.number != 0}"><a th:href="@{/auth/skillboard/category/main(page=${categoryList.number - 1})}">Previous</a></li>
+                <th:block th:each="num : ${#numbers.sequence(0, categoryList.totalPages - 1)}">
+                    <li ><a th:href="@{/auth/skillboard/category/main(page=${num})}" th:text="${num+1}"></a></li>
+                </th:block>
+                <li  th:if="${categoryList.last != true}"><a th:href="@{/auth/ skillboard/category/main(page=${categoryList.number + 1})}">Next</a></li>
+            </ul>
+        </div>
+
 
 
     </div>
