페이지 모바일일때 삐져나가지 않게 사이즈 vw으로 변경함 그외 og태그 secure 붙여봄 https 에서 작동하나 확인바람

--- a/src/main/resources/templates/skillBoard/skillBoardMain.html
+++ b/src/main/resources/templates/skillBoard/skillBoardMain.html
@@ -148,6 +148,15 @@
                 width: 100%;
             }
         }
+        
+        @media screen and (max-width: 560px){
+            .boardListNumber li{
+                margin: 0 5px;
+                width: 10px;
+                font-size: 4vw;
+            }
+
+        }
 
 
     </style>
