--- a/src/main/resources/templates/board/boardMain.html
+++ b/src/main/resources/templates/board/boardMain.html
@@ -86,7 +86,7 @@
 
         .boardListNumber{
             position: absolute;
-            bottom: -20px;
+            bottom: -50px;
             width: 100%;
             border: solid 2px black;
             border-radius: 10px;
@@ -138,6 +138,14 @@
             .boardDivs a{
                 width: 100%;
             }
+        }
+        @media screen and (max-width: 560px){
+            .boardListNumber li{
+                margin: 0 5px;
+                width: 10px;
+                font-size: 4vw;
+            }
+
         }
 
     </style>
