어드민이 모든 글을 삭제할수 있도록 만들어놓음

--- a/src/main/resources/templates/PortfolioBoard/portwrite.html
+++ b/src/main/resources/templates/PortfolioBoard/portwrite.html
@@ -62,6 +62,8 @@
 
         $('.summernote').summernote({
             lang: 'ko-KR',
+            height: 900,
+            maxHeight: 1100,
             callbacks: {
                 //여기 부분이 이미지를 첨부하는 부분
                 // 업로드와 동시에 진행되는 콜백 함수
