--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -13,7 +13,6 @@
 
         .boardWriteMainDiv{
             width: 1100px;
-            height: 900px;
             min-height: 900px;
             margin: 40px auto;
         }
@@ -95,7 +94,8 @@
         $('.summernote').summernote({
             focus: true,                  // 에디터 로딩후 포커스를 맞출지 여부
             lang: "ko-KR", // 한글 설정
-            height: 700,
+            height: 900,
+            maxHeight: 1100,
             callbacks: {
                 //여기 부분이 이미지를 첨부하는 부분
                 // 업로드와 동시에 진행되는 콜백 함수
