org태그에 관한 공부중... 적용이 안되어서 생각보다빡셈 일정부분만 수정함 나중에 모두 수정바람

--- a/src/main/resources/templates/board/boardDetails.html
+++ b/src/main/resources/templates/board/boardDetails.html
@@ -144,10 +144,10 @@
       var thumbnail = [[${board.getThumbnail()}]]
 
       if(thumbnail == "" || thumbnail == null){
-        document.getElementById("ogImage").setAttribute("content", "https://www.ybloglab.shop/img/thumbnailandimage/defaultthumbnail.png")
+        //document.getElementById("ogImage").setAttribute("content", "https://www.ybloglab.shop/img/thumbnailandimage/defaultthumbnail.png")
         document.getElementById("twitterImage").setAttribute("content", "https://www.ybloglab.shop/img/thumbnailandimage/defaultthumbnail.png")
       }else{
-        document.getElementById("ogImage").setAttribute("content", "https://www.ybloglab.shop" + thumbnail)
+        //document.getElementById("ogImage").setAttribute("content", "https://www.ybloglab.shop" + thumbnail)
         document.getElementById("twitterImage").setAttribute("content", "https://www.ybloglab.shop"+thumbnail)
       }
 
