--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -19,11 +19,11 @@
     <!-- 카카오 메타데이터들-->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta id="ogUrl" property="og:url:secure" content="https://ybloglab.shop/">
-    <meta id="ogTitle" property="og:title:secure" content="YBlogLab 스프링부트 포트폴리오, 기술, 개인 블로그">
+    <meta property="og:url" th:content="${ogUrl} ?:'https://ybloglab.shop/'">
+    <meta id="ogTitle" property="og:title" th:content=" ${ogTitle} ?: 'YBlogLab 스프링부트 포트폴리오, 기술, 개인 블로그'">
     <meta property="og:type" content="website">
-    <meta id="ogImage" property="og:image:secure" content="https://ybloglab.shop/img/YLabLogo.png">
-    <meta id="ogDescription" property="og:description:secure" content="포트폴리오용 개인 블로그" />
+    <meta property="og:image" th:content="${ogImage}?:'https://ybloglab.shop/img/YLabLogo.png'">
+    <meta id="ogDescription" property="og:description" th:content="${ogDescription}?:'포트폴리오용 개인 블로그'"/>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <!-- 카카오 메타데이터들-->
 
@@ -41,12 +41,11 @@
     <!-- 구글 검색 노출을 위한 meta,title 데이터들-->
 
     <!-- 트위터 메타 태그들 -->
-    <meta id="twitterCard" name="twitter:card:secure" content="summary">
-    <meta id="twitterUrl"  name="twitter:url:secure" content="https://ybloglab.shop/">
-    <meta id="twitterTitle" name="twitter:title:secure" content="YBlogLab 스프링부트 포트폴리오, 기술, 개인 블로그">
-    <meta id="twitterDescription" name="twitter:description:secure" content="포트폴리오용 개인블로그를 직접 스프링부트로 만들었습니다. 개인적으로 공부하는 내용과 기술등을 게시하고
-            사소한 것이나 후기, 리뷰도 남기는 등 자유도 높은 개인블로그입니다.">
-    <meta id="twitterImage" name="twitter:image:secure" content="https://ybloglab.shop/img/YLabLogo.png">
+    <meta id="twitterCard" name="twitter:card" th:content="${twtCard}?:'summary'">
+    <meta id="twitterUrl"  name="twitter:url" th:content="${twtUrl}?:'https://ybloglab.shop/'">
+    <meta id="twitterTitle" name="twitter:title" th:content="${twtTitle}?:'YBlogLab 스프링부트 포트폴리오, 기술, 개인 블로그'">
+    <meta id="twitterDescription" name="twitter:description" th:content="${twtDescription}?:'포트폴리오용 개인블로그를 직접 스프링부트로 만들었습니다. 개인적으로 공부하는 내용과 기술등을 게시하고 사소한 것이나 후기, 리뷰도 남기는 등 자유도 높은 개인블로그입니다.'">
+    <meta id="twitterImage" name="twitter:image" th:content="${twtImage}?:'https://ybloglab.shop/img/YLabLogo.png'">
     <!-- 트위터 메타 태그들 -->
 
 
