--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -20,21 +20,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:url" th:content="${ogUrl} ?:'https://ybloglab.shop/'">
-    <meta id="ogTitle" property="og:title" th:content=" ${ogTitle} ?: 'YBlogLab 스프링부트 포트폴리오, 기술, 개인 블로그'">
+    <meta property="og:title" th:content=" ${ogTitle} ?: 'YBlogLab 스프링부트 포트폴리오, 기술, 개인 블로그'">
     <meta property="og:type" content="website">
     <meta property="og:image" th:content="${ogImage}?:'https://ybloglab.shop/img/YLabLogo.png'">
-    <meta id="ogDescription" property="og:description" th:content="${ogDescription}?:'포트폴리오용 개인 블로그'"/>
+    <meta property="og:description" th:content="${ogDescription}?:'포트폴리오용 개인 블로그'"/>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <!-- 카카오 메타데이터들-->
 
 
     <!-- 구글 검색 노출을 위한 meta,title 데이터들-->
-    <title>스프링부트 포트폴리오, 기술, 개인 블로그"</title>
+    <title th:text="${title}?:'스프링부트 포트폴리오, 기술, 개인 블로그'"></title>
     <meta
             id="description"
             name="description"
-            content="포트폴리오용 개인블로그를 직접 스프링부트로 만들었습니다. 개인적으로 공부하는 내용과 기술등을 게시하고
-            사소한 것이나 후기, 리뷰도 남기는 등 자유도 높은 개인블로그입니다.">
+            th:content="${description}?:'포트폴리오용 개인블로그를 직접 스프링부트로 만들었습니다. 개인적으로 공부하는 내용과 기술등을 게시하고 사소한 것이나 후기, 리뷰도 남기는 등 자유도 높은 개인블로그입니다.'">
 
 
     <!--게시판을 다닐때마다 제목은 title과 descroption등 달라질 예정 -->
