--- a/src/main/resources/templates/skillBoard/skillBoardDetails.html
+++ b/src/main/resources/templates/skillBoard/skillBoardDetails.html
@@ -65,31 +65,31 @@
 
             // console.log(window.location.origin) 지금당장 하드코딩이지만 이걸쓰셈 추후에는
 
-            document.title = boardtitle
-            document.getElementById("ogTitle").setAttribute("content", boardtitle )
+            //document.title = boardtitle
+            //document.getElementById("ogTitle").setAttribute("content", boardtitle )
             document.getElementById("twitterTitle").setAttribute("content", boardtitle )
-            document.getElementById("ogUrl").setAttribute("content", window.location.href)
+            //document.getElementById("ogUrl").setAttribute("content", window.location.href)
             document.getElementById("twitterUrl").setAttribute("content", window.location.href)
 
             var description = [[${board.getDescription()}]]
 
             if(description == "" || description == null){
-                document.getElementById("description").setAttribute("content", "자유게시판글입니다.")
-                document.getElementById("ogDescription").setAttribute("content", "자유게시판글입니다.")
+              //  document.getElementById("description").setAttribute("content", "자유게시판글입니다.")
+              //  document.getElementById("ogDescription").setAttribute("content", "자유게시판글입니다.")
 
             }else {
-                document.getElementById("description").setAttribute("content", description)
-                document.getElementById("ogDescription").setAttribute("content", description)
+                //document.getElementById("description").setAttribute("content", description)
+                //document.getElementById("ogDescription").setAttribute("content", description)
                 document.getElementById("twitterDescription").setAttribute("content", description)
             }
 
             var thumbnail = [[${board.getThumbnail()}]]
 
             if(thumbnail == "" || thumbnail == null){
-                document.getElementById("ogImage").setAttribute("content", "https://www.ybloglab.shop/img/thumbnailandimage/defaultthumbnail.png")
+                //document.getElementById("ogImage").setAttribute("content", "https://www.ybloglab.shop/img/thumbnailandimage/defaultthumbnail.png")
                 document.getElementById("twitterImage").setAttribute("content", "https://www.ybloglab.shop/img/thumbnailandimage/defaultthumbnail.png")
             }else{
-                document.getElementById("ogImage").setAttribute("content", "https://www.ybloglab.shop"+thumbnail)
+                //document.getElementById("ogImage").setAttribute("content", "https://www.ybloglab.shop"+thumbnail)
                 document.getElementById("twitterImage").setAttribute("content", "https://www.ybloglab.shop"+thumbnail)
             }
 
